# There-Is-No-Point

./: .gitignore  .pre-commit-config.yaml  .yamlfmt.yaml  README.md  helmfile.yaml
apps/productpage/: Dockerfile  README.md  Tiltfile  pyproject.toml
apps/productpage/src/productpage/: app.py  settings.py
apps/productpage/src/productpage/templates/: index.html  productpage.html
charts/apps/app/: Chart.yaml  values.yaml
charts/apps/app/templates/: _helpers.tpl  deployment.yaml
charts/apps/httpbingo-mesh/: Chart.yaml  values.yaml
charts/apps/httpbingo-mesh/templates/: _helpers.tpl  http-route.yaml
charts/cluster/istio-config/: Chart.yaml  values.yaml
charts/cluster/istio-config/templates/: _helpers.tpl  default-deny-waypoint.yaml  default-deny.yaml  default-gateway-options.yaml  default-strict-mtls.yaml
charts/cluster/istio-ingress/: Chart.yaml  values.yaml
charts/cluster/istio-ingress/templates/: _helpers.tpl  allow-all.yaml  gateway-options.yaml  gateway.yaml  request-authentication.yaml  require-jwt.yaml
charts/meshes/httpbingo-mesh/: values.yaml
charts/meshes/mesh/: Chart.yaml  values.yaml
charts/meshes/mesh/templates/: _helpers.tpl  (+2 more)
helmfile.d/: main.yaml.gotmpl
helmfiles/: apps.yaml.gotmpl  bookinfo.yaml.gotmpl  dependencies.yaml.gotmpl  httpbingo.yaml.gotmpl  m2m-httpbingo.yaml.gotmpl  mesh-base.yaml  mesh-global-config.yaml
helmfiles/values/mesh-base/: istio-cni.yaml
k3d/: config.yaml
scripts/: delete.sh  run.sh
scripts/cluster/: cluster.sh
scripts/lib/: utils.sh
scripts/test/: httpbin_access.sh  m2m_httpbin.sh  productpage.sh
(+35 files in other folders)
