[project]
name = "productpage"
version = "0.1.0"
description = "Istio product-page for bookinfo"
readme = "README.md"
authors = [
    { name = "Benjamin", email = "benjamin.stucki@upciti.com" }
]
requires-python = ">=3.13"
dependencies = [
    "flask==3.1.0",
    "flask-bootstrap==3.3.7.1",
    "flask-json==0.4.0",
    "future==1.0.0",
    "gevent==24.11.1",
    "gunicorn==23.0.0",
    "httpx>=0.28.1",
    "json2html==1.3.0",
    "opentelemetry-api==1.32.1",
    "opentelemetry-instrumentation==0.53b1",
    "opentelemetry-instrumentation-flask==0.53b1",
    "opentelemetry-instrumentation-wsgi==0.53b1",
    "opentelemetry-propagator-b3==1.32.1",
    "opentelemetry-sdk==1.32.1",
    "opentelemetry-semantic-conventions==0.53b1",
    "opentelemetry-util-http==0.53b1",
    "prometheus-client==0.21.1",
    "requests==2.32.3",
    "setuptools==78.1.0",
    "simplejson==3.20.1",
    "urllib3==2.4.0",
]

[dependency-groups]
dev = [
    "requests-mock==1.5.2",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
